pkg/lang/syntax/testdata/ub/validate/invalid/factory/data-lock-number.ub
factory: {
  imports: { core: 'example.com/core' }
  data-sources: {
    image: core.thing { @lock: 1 }
  }
}
